--- a/src/css/index.css
+++ b/src/css/index.css
@@ -244,31 +244,7 @@ body { font-family: "Microsoft Yahei"; }
 
 #main #ul_stair li:hover { background-color: #fe587e; }
 
-#link { border: 1px solid #ccc; height: 205px; }
-
-#link .contain dl { float: left; padding: 2px 102px 0px 68px; border-right: 1px dashed #e7e7e7; height: 168px; margin-top: 18px; }
-
-#link .contain dl dt { font-size: 15px; font-weight: bold; color: #444; height: 40px; line-height: 40px; }
-
-#link .contain dl dd { font-size: 12px; height: 28px; line-height: 28px; padding-left: 5px; }
-
-#link .contain dl dd a:hover { color: #fe587e; }
-
-#link .contain .fr { padding-left: 12px; padding-top: 56px; position: relative; width: 240px; }
-
-#link .contain .fr img { position: absolute; left: 0px; top: 14px; z-index: -2; }
-
-#link .contain .fr p { padding-left: 38px; }
-
-#link .contain .fr p strong { font-size: 18px; color: #fe587e; }
-
-#link .contain .fr p i { padding-left: 38px; color: #fe587e; }
-
-#link .contain .fr span { color: red; }
-
-#link .contain .fr input { width: 100px; height: 23px; background: url(../img/btn_bg_red.png) no-repeat; border-radius: 3px; color: #fff; margin-top: 13px; margin-bottom: 5px; }
-
-#link .contain .fr h3 { color: blue; font-weight: 600; }
+#header .nav3 .contain .two { display: block; }
 
 #footer { border: 1px solid #ccc; }
 
