--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -32,7 +32,7 @@
             }
             .mid{width: 456px;height: 64px;  display: inline-block;  float: left;margin-left: 175px;
                 input{width: 386px;height: 34px;border:2px solid #fe587e;padding-left: 38px;float: left;background: url(../img/jlt.png) no-repeat 9px -68px;}
-                button{width: 70px;height: 34px;background-color: #fe587e;color:#fff;font-size: 14px;float: left;}
+                button{width: 70px;height: 34px;background-color: #fe587e;color:#fff;font-size: 14px;float: left;cursor: pointer;}
                 p{line-height: 44px;a{margin: 0px 6px;color:#999;}}
             }
             .right{
@@ -45,7 +45,16 @@
     }
     .nav3{background-color: #F7F7F7;border-bottom:2px solid #fe587e;
         .contain{position: relative;height: 42px; line-height: 42px;
-            .fenlei{width: 230px;height: 450px;border:1px solid #ccc;position: absolute;left: 0px;top: 42px;display: none;}
+            .three{display: none;width: 712px;height: 450px;border:1px solid #fe587e;
+                    position: absolute;left: 230px;top: 42px;z-index:999;
+            }
+            .two{width: 230px;height: 450px;border:1px solid #ccc;position: absolute;left: 0px;top: 42px;display: none;color:#fff;background-color: #fe587e;
+                li{height: 50px;border:1px solid #ccc;}
+                .active{
+                        background: url(../img/alpha.png);
+                        color: #fe587e;
+                }
+            }
             .all_nav{width: 230px;height: 42px;float: left;background-color: #fe587e;font-size: 14px;text-align: center;color:#fff;}
             .ul_nav{float: left;
                 li{float: left;font-size: 15px;
@@ -53,8 +62,8 @@
                     a:hover{color:#fe587e;}
                 }
             }
-            #cart{width: 120px;height: 40px;float: right;color:#fff;font-size: 14px;line-height: 40px;text-align: center;background:#fe587e url(../img/jlt.png) no-repeat 10px -90px;
-                
+            #cart{width: 120px;height: 40px;float: right;line-height: 40px;text-align: center;background:#fe587e url(../img/jlt.png) no-repeat 10px -90px;
+                a{font-size: 14px;color:#fff;display: block;width: 120px;height: 40px;}
             }
         }
     }
