--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,15 +48,19 @@
 
 #header .nav3 .contain { position: relative; height: 42px; line-height: 42px; }
 
-#header .nav3 .contain .three { display: none; width: 712px; height: 450px; border: 1px solid #fe587e; position: absolute; left: 230px; top: 42px; z-index: 999; }
+#header .nav3 .contain .three { display: none; width: 712px; height: 450px; border: 1px solid #fe587e; position: absolute; left: 230px; top: 42px; z-index: 999; background-color: #fff; padding: 25px 55px; }
 
-#header .nav3 .contain .two { width: 230px; height: 450px; border: 1px solid #ccc; position: absolute; left: 0px; top: 42px; display: none; color: #fff; background-color: #fe587e; }
+#header .nav3 .contain .three a { display: inline-block; line-height: 50px; font-size: 13px; padding: 0px 25px; }
 
-#header .nav3 .contain .two li { height: 50px; border: 1px solid #ccc; }
+#header .nav3 .contain .two { width: 230px; height: 450px; border: 1px solid #ccc; position: absolute; left: 0px; top: 42px; display: none; background-color: #fe587e; z-index: 999; }
+
+#header .nav3 .contain .two li { height: 56px; border: 1px solid #ccc; list-style: none; cursor: pointer; line-height: 56px; }
+
+#header .nav3 .contain .two li a { display: inline-block; width: 95px; height: 100%; padding-left: 13px; font-size: 16px; color: #fff; }
 
 #header .nav3 .contain .two .active { background: url(../img/alpha.png); color: #fe587e; }
 
-#header .nav3 .contain .all_nav { width: 230px; height: 42px; float: left; background-color: #fe587e; font-size: 14px; text-align: center; color: #fff; }
+#header .nav3 .contain .all_nav { width: 230px; height: 42px; float: left; background-color: #fe587e; font-size: 14px; color: #fff; padding-left: 28px; font-size: 15px; cursor: pointer; }
 
 #header .nav3 .contain .ul_nav { float: left; }
 
